--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: ghcr.io/l0gnes/shrinkwrap
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "master"
+  tag: "master" # {"$imagepolicy": "flux-system:shrinkwrap"}
 
 imagePullSecrets: []
 nameOverride: ""
